2004-10-21    <vargaz@freemail.hu>

	* tramp-amd64.c (amd64_magic_trampoline): Disable patching of trampolines for 
	valuetype methods.

2004-10-20    <vargaz@freemail.hu>

	* driver.c: Add SHARED to the set of optimizations tested.

	* tramp-amd64.c (amd64_magic_trampoline): Patch trampoline code as well.

	* mini.c (mono_method_to_ir): Mark the domainvar as volatile when it is implicitly
	used by CEE_NEWARR.

	* ssa.c (mono_ssa_deadce): Do not optimize away accesses to volatile variables.

2004-10-20  Martin Baulig  <martin@ximian.com>

	* mini-exceptions.c (mono_handle_exception): Call
	mono_debugger_handle_exception() to tell the debugger about
	catch/finally clauses.

2004-10-18  Zoltan Varga  <vargaz@freemail.hu>

	* exceptions-amd64.c (mono_arch_find_jit_info): Pop arguments of the stack.

	* mini-amd64.c (mono_amd64_get_vcall_slot_addr): Handle extended registers. Fixes
	#68447.

2004-10-15  Geoff Norton  <gnorton@customerdna.com>

	* mini-ppc.c (calculate_sizes): Marshal valuetypes for pinvoke
	methods as their native size, fixed bug #57543, #57545.
	* mini-ppc.c (mono_arch_output_basic_block): Use mulli for imm16 types
	This saves a temporary register and mullw call down into 1 (minor perf
	increase for cases like sum = sum * 5;  This use to translate into:
	    li r11,5
	    mullw r28,r28,r11
	It now translates to
	    mulli r28,r28,5

2004-10-15  Zoltan Varga  <vargaz@freemail.hu>

	* trace.c (mono_trace_eval): Use mono_method_desc_full_match. Fixes
	#68388.

2004-10-11  Martin Baulig  <martin@ximian.com>

	* mini.c (mono_method_to_ir): If we're a generic method, get the
	MonoGenericContainer from our MonoMethodNormal and create a
	MonoGenericContext from it.

2004-10-08  Zoltan Varga  <vargaz@freemail.hu>

	* inssel-long32.brg (OP_LCONV_TO_OVF_I2): Fix CONV_I1 -> CONV_I2.

	* basic-long.cs: Add test for checked i8->i2 cast.

Wed Oct 6 12:40:28 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* inssel-ppc.brg: added a couple of speedup rules.
